[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/level3/Level3.gd" type="Script" id=1]
[ext_resource path="res://user_interface/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/pause/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/clouds.png" type="Texture" id=4]
[ext_resource path="res://environment/town.png" type="Texture" id=5]
[ext_resource path="res://environment/environment_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/ghost/Ghost.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemies/hell_beast/HellBeast.tscn" type="PackedScene" id=9]
[ext_resource path="res://enemies/hell_hound/HellHound.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/zorgoth/Zorgoth.tscn" type="PackedScene" id=11]
[ext_resource path="res://levels/res/LevelEnd.tscn" type="PackedScene" id=12]
[ext_resource path="res://levels/res/sound/game_over.wav" type="AudioStream" id=13]

[node name="Level3" type="Node2D" groups=[
"save",
]]
script = ExtResource( 1 )

[node name="UserInterface" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="GUI" parent="UserInterface" instance=ExtResource( 2 )]

[node name="PauseMenu" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 100

[node name="PauseMenu" parent="PauseMenu" instance=ExtResource( 3 )]
visible = false

[node name="BackGround" type="Node2D" parent="."]
editor/display_folded = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="BackGround"]
editor/display_folded = true
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="Clouds" type="ParallaxLayer" parent="BackGround/ParallaxBackground"]
motion_mirroring = Vector2( 252, 0 )

[node name="Sprite" type="Sprite" parent="BackGround/ParallaxBackground/Clouds"]
scale = Vector2( 1, 0.818182 )
texture = ExtResource( 4 )
centered = false

[node name="Town" type="ParallaxLayer" parent="BackGround/ParallaxBackground"]
motion_mirroring = Vector2( 252, 0 )

[node name="Sprite" type="Sprite" parent="BackGround/ParallaxBackground/Town"]
scale = Vector2( 1, 0.818182 )
texture = ExtResource( 5 )
centered = false

[node name="TileMap" type="TileMap" parent="BackGround"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65302, 36, 0, 327914, 36, 0, 458998, 36, 0, 459002, 34, 0, 459006, 34, 0, 721130, 34, 0, 786695, 34, 0, 786699, 34, 0, 852158, 36, 0, 852214, 36, 0, 983169, 31, 0, 983173, 34, 0, 983177, 34, 0, 1048576, 35, 0, 1048851, 34, 0, 1048855, 34, 0, 1114237, 31, 0, 1114433, 36, 0, 1114437, 34, 0, 1114441, 34, 0, 1245305, 31, 0, 1245331, 34, 0, 1245335, 34, 0, 1245374, 27, 0, 1245380, 27, 0, 1245386, 27, 0, 1245392, 27, 0, 1245398, 27, 0, 1245410, 27, 0, 1245416, 27, 0, 1245422, 27, 0, 1245428, 27, 0, 1311007, 34, 0, 1311008, 34, 0, 1311012, 34, 0, 1376348, 26, 0, 1376358, 26, 0, 1376368, 26, 0, 1441792, 36, 0, 1441974, 32, 0, 1442130, 34, 0, 1442134, 34, 0, 1507629, 34, 0, 1507633, 34, 0, 1507637, 34, 0, 1507641, 34, 0, 1507645, 34, 0, 1507649, 34, 0, 1573042, 32, 0, 1638560, 34, 0, 1638564, 34, 0, 1704014, 26, 0, 1704110, 32, 0, 1769822, 34, 0, 1769826, 34, 0, 1835008, 36, 0, 1966144, 26, 0, 2097516, 27, 0, 2097522, 27, 0, 2097528, 27, 0, 2097534, 27, 0, 2097540, 27, 0, 2097546, 27, 0, 2097552, 27, 0, 2097558, 27, 0, 2097564, 27, 0, 2097570, 27, 0, 2097576, 27, 0, 2097582, 27, 0, 2097588, 27, 0, 2097594, 27, 0, 2097600, 27, 0, 2228224, 26, 0, 2228234, 26, 0, 2228244, 26, 0, 2228254, 26, 0, 2228264, 26, 0, 2228274, 26, 0 )

[node name="Level" type="Node2D" parent="."]

[node name="Player" parent="Level" instance=ExtResource( 7 )]
position = Vector2( 26, 123 )
scale = Vector2( 0.5, 0.5 )
speed = 60

[node name="Ghost" parent="Level" instance=ExtResource( 8 )]
position = Vector2( 138, 121 )
scale = Vector2( 0.5, 0.5 )
exp_worth = 8
health = 4
damage = 2

[node name="HellBeast" parent="Level" instance=ExtResource( 9 )]
position = Vector2( 444, 67 )
scale = Vector2( 0.5, 0.5 )
exp_worth = 8
health = 4
damage = 2

[node name="HellHound" parent="Level" instance=ExtResource( 10 )]
position = Vector2( 867, 67 )
scale = Vector2( 0.5, 0.5 )
exp_worth = 4
health = 2
damage = 2

[node name="HellBeast2" parent="Level" instance=ExtResource( 9 )]
position = Vector2( 1270, 75 )
scale = Vector2( 0.5, 0.5 )
exp_worth = 8
health = 4
damage = 2

[node name="Zorgoth" parent="Level" instance=ExtResource( 11 )]
position = Vector2( 1716, 95 )
scale = Vector2( 0.5, 0.5 )
exp_worth = 32
health = 20
damage = 2

[node name="LevelEnd" parent="Level" instance=ExtResource( 12 )]
visible = false
position = Vector2( 1798, 108 )
scale = Vector2( 0.5, 0.5 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="died" from="Level/Player" to="." method="_on_Player_died"]
[connection signal="exp_changed" from="Level/Player" to="UserInterface/GUI" method="_on_Player_exp_changed"]
[connection signal="health_changed" from="Level/Player" to="UserInterface/GUI" method="_on_Player_health_changed"]
[connection signal="died" from="Level/Zorgoth" to="." method="_on_Zorgoth_died"]
[connection signal="level_complete" from="Level/LevelEnd" to="." method="_on_LevelEnd_level_complete"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
